many small updates

--- a/Anhang/AnhangIterationsplan.tex
+++ b/Anhang/AnhangIterationsplan.tex
@@ -8,14 +8,14 @@
 		\item GUI Funktionsgruppe erstellen
 		\item Maintenance Screen erstellen
 		\item Administration Screen erstellen
-		\item AUFK erweitern und Speicher Logik einbauen
+		\item AUFK erweitern und Speicherlogik einbauen
 		\item COR Programm erweitern
 	\end{enumerate}
 	\item SCE Entwicklung
 	\begin{enumerate}
-		\item Erstellung der Da Dictionary-Objekte
-		\item Erweiterung der /SAPAPO/ORDFLDS
-		\item RFC fähiges Funktionsmodul erstellen mit Speicherlogik zur Übertragung der Kommentare   aus dem ECC ins APO
+		\item Erstellung der Dictionary-Objekte
+		\item Erweiterung der \textsc{/sapapo/ordflds}
+		\item RFC fähiges Funktionsmodul erstellen mit Speicherlogik zur Übertragung der Kommentare aus dem ECC ins APO
 	\end{enumerate}
 	\item ECE Entwicklung
 	\begin{enumerate}
