--- a/Anhang/AnhangLastenheft.tex
+++ b/Anhang/AnhangLastenheft.tex
@@ -5,15 +5,15 @@ Die Anwendungen müssen folgende Anforderungen erfüllen:
 \begin{enumerate}[itemsep=0em,partopsep=0em,parsep=0em,topsep=0em]
 \item Darstellung der Daten
 	\begin{enumerate}
-	\item Die Anwendung muss die Funktion bieten Aufträge nach vorgegebenen Kriterien filter zu können.
+	\item Die Anwendung muss die Funktion bieten, Aufträge nach vorgegebenen Kriterien filtern zu können.
 	\item Die Aufträge müssen in einer für den Planer übersichtlichen Umgebung dargestellt werden.
-	\item Der Planer soll möglichst einfach und schnell Kommentare schreiben und anzeigen können. 
+	\item Der Planer soll möglichst einfach und schnell Kommentare schreiben und sich anzeigen lassen können. 
 	\item Der Planer soll zudem auch in den gewohnten Standardanwendungen Kommentare verfassen und lesen können 
 	\end{enumerate}
 \item Weitere Anforderungen
 	\begin{enumerate}
 	\item Die Anwendungen sollen sauber und übersichtlich programmiert werden, sodass spätere Erweiterungen leicht durchzuführen sind.
-	\item Möglichst wenig Code soll in Userexits oder sonstigen Erweiterungspunkten geschrieben werden, da dieser immer per Hand beim Kunden eingefügt werden müssen.
+	\item Möglichst wenig Code soll in User Exits oder sonstigen Erweiterungspunkten geschrieben werden, da diese immer manuell beim Kunden eingefügt werden müssen.
 	\end{enumerate}
 \end{enumerate}
 
