--- a/Inhalt/Qualitätssicherung.tex
+++ b/Inhalt/Qualitätssicherung.tex
@@ -4,7 +4,7 @@
 
 \subsection{Code Reviews während des Projekts}
 \label{sec:Code Reviews während des Projekts}
-Während des Projekts, in der Mitte und am Ende gab es zwei Code Reviews welche jeweils 1 Stunde lang gingen und wo zwei Mitarbeiter der Entwicklungsabteilung gemeinsam mit dem Auszubildenden über den Code geschaut haben und mögliche Schwachstellen diskutiert und verbessert haben. Außerdem wurden wertvolle Tipps gegeben wie das Programm noch besser umgesetzt werden kann.    
+In der Mitte und am Ende des Projekts gab es zwei einstündige Code Reviews wo zwei Mitarbeiter der Entwicklungsabteilung gemeinsam mit dem Auszubildenden über den Code geschaut haben und mögliche Schwachstellen diskutiert und verbessert wurden. Außerdem wurden wertvolle Tipps gegeben wie das Programm noch besser umgesetzt werden kann.    
 
 \subsection{Manuelle Tests}
 \label{sec:Manuelle Tests}
