--- a/Tabellen/Ressourcenplan.tex
+++ b/Tabellen/Ressourcenplan.tex
@@ -3,10 +3,10 @@
 \rowcolor{odd}\textbf{Personal} & & \\\hline
 Thomas Pöhlmann & Entwickler und Autor & Projektausführung und Dokumentation \\\\[-1em]\hline
 Florian von der Weth & Senior Consultant & Auftraggeber \\\hline
-Florian P. & Junior Consultant & CodeReview \\\hline
-Julian P. & Consultant & CodeReview\\\hline
+Florian P. & Junior Consultant & Code Review \\\hline
+Julian P. & Consultant & Code Review\\\hline
 \rowcolor{odd}\textbf{Hardware} & & \\\hline
- & Lenovo ThinkPad T450s & Arbeits und Testgerät \\\hline
+ & Lenovo ThinkPad T450s & Arbeits- und Testgerät \\\hline
  & 2 * Dell 24 P2419H 61 & Hauptbildschirme \\\hline
 \rowcolor{odd}\textbf{Software} & & \\\hline
 Betriebssystem & Microsoft Windows 10 & Arbeits-/Test-Betriebssystem \\\hline
