--- a/Tabellen/ZeitplanungKomplett.tex
+++ b/Tabellen/ZeitplanungKomplett.tex
@@ -6,34 +6,33 @@
 1. Analyse des Ist-Zustands & & & 1,5 h & \\
 \rowcolor{odd}1.1. Fachgespräch mit dem Ausbilder & & 1 h & & \\
 1.2. Prozessanalyse & & 0,5 h & & \\
-\rowcolor{odd}2. \gqq{Make or buy}-Entscheidung und Wirtschaftlichkeitsanalyse & &       & 1 h   &  \\
-3. Erstellen eines \gqq{Use-Case}-Diagramms & & & 0.5 h & \\
-\rowcolor{odd}4. Erstellung des Lastenhefts mit dem Ausbilder & & & 3 h & \\
+\rowcolor{odd}2. Erstellung eines \gqq{Use-Case}-Diagramms & & & 0.5 h & \\
+3. Erstellung des Lastenhefts mit dem Ausbilder & & & 3 h & \\
 \rowfont{\color{headingfont}}\rowcolor{heading}\textbf{Entwurfsphase} & \textbf{} & \textbf{} & \textbf{} & \textbf{6 h} \\
 1. Iterationsplanung & & & 2 h & \\
-\rowcolor{odd}2. Erstellen des Pflichtenhefts & & & 3 h & \\
-3. Erstellung der Datenbank Modelle & & & 1 h & \\
+\rowcolor{odd}2. Erstellung des Pflichtenhefts & & & 3 h & \\
+3. Erstellung der Datenbankmodelle & & & 1 h & \\
 \rowfont{\color{headingfont}}\rowcolor{heading}\textbf{Implementierungsphase} & \textbf{} & \textbf{} & \textbf{} & \textbf{23 h} \\
 1. ECC Implementierung & & & 12 h & \\
-\rowcolor{odd}1.1. Implementierung der Datenbanken und Dictionary-Objekten & & 1 h & & \\
+\rowcolor{odd}1.1. Implementierung der Datenbanken und Dictionary-Objekte & & 1 h & & \\
 1.2. Funktionsgruppe erstellen & & 1 h & \\
 \rowcolor{odd}1.2.1. Screens erstellen & 0.5 h & & & \\
 1.2.2. Stati und Titel erstellen & 0.5 h & & & \\
 1.3. Implementierung der Klassen & & 8 h & & \\
-\rowcolor{odd}1.3.1 Implementierung der GUI Klasse, PBO und PAI & 2 h & & & \\
-1.3.2. Ladelogik implementieren & 2 h & & & \\
-\rowcolor{odd}1.3.3. Speicherlogik implementieren & 4 h & & & \\
-1.4. COR Erweiterung implementieren & & 2 h & & \\
+\rowcolor{odd}1.3.1. Implementierung der GUI Klasse, PBO und PAI & 2 h & & & \\
+1.3.2. Implementierung der Ladelogik & 2 h & & & \\
+\rowcolor{odd}1.3.3. Implementierung der Speicherlogik & 4 h & & & \\
+1.4. Implementierung der COR Erweiterung & & 2 h & & \\
 \rowcolor{odd}2. APO Implementierung & & & 11 h & \\
 2.1. Implementierung der Datenbanken und Dictionary-Objekten & & 1h & & \\
 \rowcolor{odd}2.2. Funktionsgruppe erstellen & & 1h & & \\
 2.2.1. Screens erstellen & 0.5 h & & & \\
 \rowcolor{odd}2.2.2. Stati und Titel erstellen & 0.5 h & & & \\
-\rowcolor{odd}2.3 Implementierung der Klassen & & 6 h & & \\
-2.3.1 Implementierung der GUI Klasse, PBO und PAI & 1 h & & & \\
-\rowcolor{odd}2.3.2 Ladelogik implementieren & 1 h & & & \\
-2.3.3 Speicherlogik implementieren & 4 h & & & \\
-\rowcolor{odd}2.4. RRP3 Erweiterung implementieren & & 3 h & & \\
+\rowcolor{odd}2.3. Implementierung der Klassen & & 6 h & & \\
+2.3.1. Implementierung der GUI Klasse, PBO und PAI & 1 h & & & \\
+\rowcolor{odd}2.3.2 Implementieren der Ladelogik & 1 h & & & \\
+2.3.3. Implementieren der Speicherlogik & 4 h & & & \\
+\rowcolor{odd}2.4. Implementieren der RRP3 Erweiterung & & 3 h & & \\
 \rowfont{\color{headingfont}}\rowcolor{heading}\textbf{Testphase/Qualitätsicherung} & \textbf{} & \textbf{} & \textbf{} & \textbf{6 h} \\
 1. Code Reviews & & & 2 h   &  \\
 \rowcolor{odd} 2. Manuelle Tests & & & 1 h & \\
