--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -23,7 +23,7 @@ Da die genauen Personalkosten Betriebsgeheimnis sind, wurde die Kalkulationen mi
 	\frac{\eur{12000} \mbox{/Jahr}}{1840 \mbox{ h/Jahr}} \approx \eur{6,52}\mbox{/h}
 \end{eqnarray}
 	
-Der Rechnung zufolge beträgt der Stundensatz eines Azubis ca. 7€. Die Kosten eines Mitarbeiters wurden auf 25€ die Stunde geschätzt. 
+Der Rechnung zufolge beträgt der Stundensatz eines Auszubildenden ca. 7€. Die Kosten eines Mitarbeiters wurden auf 25€ pro Stunde geschätzt. 
 \newline
 Um die anfallenden Hardwarekosten zu berechnen, wurden die Anschaffungskosten aller Geräte summiert und dann durch die durchschnittliche Lebenszeit in Arbeitsstunden, in diesem Fall 3 * 365 * 5/7 * 8, geteilt.
 	
@@ -52,7 +52,7 @@ Für dieses Tool wird ein Preis von etwa 500€ angesetzt. Der Break-Even-Point 
 \end{eqnarray}
 
 \paragraph{Kunde}\mbox{} \\
-Hier lassen sich die Gewinne nicht so leicht erfassen, da zum einen die Fehleranfälligkeit der alten Lösungen (Kommentare per Email verschicken, Zettelwirtschaft usw.) deutlich verringert werden, zum anderen erspart das Tool dem Planer, welcher die Aufträge anlegt, deutlich Zeit, da dieser nicht noch ein weiteres Programm benötigt, um die Kommentare einzutragen und an seine Kollegen zu verteilen. Des Weiteren ermöglicht es den Mitarbeitern, an der Ressource (Maschine) Kommentare direkt in der Transaktion neben den Aufträgen zu sehen. In der folgenden Beispielrechnung wurden drei Szenarien einmal durchgerechnet. 
+Hier lassen sich die Gewinne nicht so leicht erfassen, da zum einen die Fehleranfälligkeit der alten Lösungen (Kommentare per Email verschicken, Zettelwirtschaft usw.) deutlich verringert werden, zum anderen erspart das Tool dem Planer, welcher die Aufträge anlegt, deutlich Zeit, da dieser nicht noch ein weiteres Programm benötigt, um die Kommentare einzutragen und an seine Kollegen zu verteilen. Des Weiteren ermöglicht es den Mitarbeitern, an der Ressource (Maschine) Kommentare direkt in der Transaktion neben den Aufträgen zu sehen. In der folgenden Beispielrechnung wurden drei Szenarien durchgerechnet. 
 
 \paragraph{Beispielrechnung}
 Es wird davon ausgegangen, dass ein Planer jeden Tag ca. eine Stunde damit beschäftigt ist, Aufträge zu kommentieren. Dieses Tool bietet eine Zeitersparnis von ca. 50\%, da die Kommentare direkt in der Transaktion verfasst werden können. Dies bedeutet eine Zeiteinsparung von 30 Minuten pro Tag und pro Planer. Bei etwa 230 Arbeitstagen pro Jahr ergibt sich eine gesamte Zeiteinsparung von  
