--- a/Tabellen/Implementierung.tex
+++ b/Tabellen/Implementierung.tex
@@ -4,12 +4,12 @@
 1. Implementierung der Datenbanken und & 1 h & 1 h & \\ 
 Dictionary-Objekten im ECC & & & \\
 \rowcolor{odd}2. Implementierung der Klassen im ECC & 9 h & 9 h & \\
-3.  Implementieren der COR Erweiterung & 2 h & 2 h & \\
+3.  Implementierung der COR Erweiterung & 2 h & 2 h & \\
 \rowcolor{odd}4. Implementierung der Datenbank und & 1 h & 1 h & \\ 
 \rowcolor{odd}Dictionary-Objekten im APO & & & \\
 5. Implementierung der Klassen im APO & 5.5 h & 6 h & + 0.5 h \\
-\rowcolor{odd}6.  Implementieren der RRP3 Erweiterung & 3 h & 3 h & \\
+\rowcolor{odd}6.  Implementierung der RRP3 Erweiterung & 3 h & 3 h & \\
 \hline
 \hline
-\rowcolor{odd}\textbf{Differenzgesamt} & & & + 0.5 h \\
+\rowcolor{odd}\textbf{Gesamt} & & & + 0.5 h \\
 \end{tabu}
