kleine anleitung und kleine fixes

--- a/Anhang.tex
+++ b/Anhang.tex
@@ -33,8 +33,12 @@
 
 \input{Anhang/AnhangScreenshots.tex}
 \clearpage
+
 \input{Anhang/AnhangProgrammingGuidlines.tex}
 \clearpage
+
+\input{Anhang/AnhangAnleitung.txt}
+\clearpage 
 
 \subsection{Klassendiagramm}
 \label{app:Klassendiagramm}
