--- a/Projektdokumentation.tex
+++ b/Projektdokumentation.tex
@@ -27,11 +27,11 @@
 
 \begin{document}
 
-\phantomsection
-\thispagestyle{empty}
-\pdfbookmark[1]{Eidesstattliche Erklärung}{ihkdeckblatt}
-\includegraphicsKeepAspectRatio{DeckblattIHK}{1}
-\cleardoublepage
+%\phantomsection
+%\thispagestyle{empty}
+%\pdfbookmark[1]{Eidesstattliche Erklärung}{ihkdeckblatt}
+%\includegraphicsKeepAspectRatio{DeckblattIHK}{1}
+%\cleardoublepage
 
 \phantomsection
 \thispagestyle{plain}
