--- a/Anhang/AnhangAnleitung.txt.tex
+++ b/Anhang/AnhangAnleitung.txt.tex
@@ -1,14 +1,14 @@
 % !TEX root = Projektdokumentation.tex
-\subsection{Anleitung}
-\label{app:Anleitung}
+\subsection{Kundenanleitung}
+\label{app:Kundenanleitung}
 
-\subsubsection{Kommentarpflege im APO und im ECC}
-Es gibt mehrere Möglichkeiten um Kommentare zu schreiben.
-Zum einen kann die Transaktion \textsc{/camelot/oc\_maint} genutzt werden. Auf dem Selektionsbildschirm können die Parameter Material, Lokation, Startdatum, Enddatum, User (welcher den Auftrag erstellt hat) und Datum (wann der Auftrag erstellt wurde) eingegeben werden. Mit der F8 Taste wird diese Auswahl bestätigt und alle Aufträge, die die entsprechenden Parameter erfüllen, erscheinen in einem \ac{ALV}. Um die Aufträge nun zu bearbeiten muss oben links per Klick oder per F2 Tastenkürzel in den Bearbeitungsmodus gewechselt werden. Nun lassen sich Kommentare bearbeiten, löschen oder neu erstellen. Abschließend müssen die Änderungen dann über den Speichernknopf in der Datenbank gespeichert werden.
+\subsubsection{Kommentarpflege im APO und ECC}
+Es gibt mehrere Möglichkeiten, um Kommentare zu schreiben.
+Zum einen kann die Transaktion \textsc{/camelot/oc\_maint} genutzt werden. Auf dem Selektionsbildschirm können die Parameter Material, Lokation, Startdatum, Enddatum, User (welcher den Auftrag erstellt hat) und Datum (wann der Auftrag erstellt wurde) eingegeben werden. Mit der F8 Taste wird diese Auswahl bestätigt und alle Aufträge, die die entsprechenden Parameter erfüllen, erscheinen in einem \ac{ALV}. Um die Aufträge nun zu bearbeiten, muss oben links per Klick oder per F2 Tastenkürzel in den Bearbeitungsmodus gewechselt werden. Nun lassen sich Kommentare bearbeiten, löschen oder neu erstellen. Abschließend müssen die Änderungen dann über den Speichernknopf in der Datenbank gespeichert werden.
 
 Außerdem kann im ECC die COR1-3 genutzt werden. Hier muss wie gewohnt die Auftragsnummer eingegeben werden und dann kann über einen separaten Tab mit dem Namen Customer Screen ein Kommentar geschrieben bzw. angeschaut werden.
 
-Im APO besteht die Möglichkeit über die RRP3 neben den Aufträgen die Kommentare anzuschauen bzw. im Editiermodus diese zu verändern.
+Im APO besteht die Möglichkeit, über die RRP3 neben den Aufträgen die Kommentare anzuschauen bzw. im Editiermodus diese zu verändern.
  
 \subsubsection{Administration im ECC}
 Im ECC kann über die Transaktion \textsc{/camelot/oc\_admin} ein Feld der AUFK Datenbanktabelle ausgewählt werden. In dieses wird dann beim Speichern ebenfalls der Kommentar gespeichert.
