--- a/Inhalt/Implementierungsphase.tex
+++ b/Inhalt/Implementierungsphase.tex
@@ -4,7 +4,7 @@
 
 \subsection{Iterationsplanung}
 \label{sec:Iterationsplanung}
-Bevor mit der eigentlichen Implementierung begonnen wurde, wurde zuerst ein Iterationsplan erstellt. In ihm wurden die Iterationsschritte und deren Reihenfolge definiert. Innerhalb einer Iteration wird die zuvor definierte Funktionalität eingebaut. Der erstellte Iterationsplan befindet sich im Anhang \Anhang{app:Iterationsplan}.
+Bevor mit der eigentlichen Implementierung begonnen wurde, wurde zuerst ein Iterationsplan erstellt. In ihm wurden die Iterationsschritte und deren Reihenfolge definiert. Innerhalb einer Iteration wird die zuvor definierte Funktionalität eingebaut. Der erstellte Iterationsplan befindet sich im \Anhang{app:Iterationsplan}.
 
 \subsection{Implementierung der Datenstruktur ECC}
 \label{sec:Implementierung der Datenstruktur ECC}
