--- a/Tabellen/Implementierung.tex
+++ b/Tabellen/Implementierung.tex
@@ -7,9 +7,9 @@ Dictionary-Objekten im ECC & & & \\
 3.  Implementierung der COR Erweiterung & 2 h & 2 h & \\
 \rowcolor{odd}4. Implementierung der Datenbank und & 1 h & 1 h & \\ 
 \rowcolor{odd}Dictionary-Objekten im APO & & & \\
-5. Implementierung der Klassen im APO & 5.5 h & 6 h & + 0.5 h \\
+5. Implementierung der Klassen im APO & 5.5 h & 6 h & - 0.5 h \\
 \rowcolor{odd}6.  Implementierung der RRP3 Erweiterung & 3 h & 3 h & \\
 \hline
 \hline
-\rowcolor{odd}\textbf{Gesamt} & & & + 0.5 h \\
+\rowcolor{odd}\textbf{Gesamt} & & & - 0.5 h \\
 \end{tabu}
