--- a/Tabellen/Zeitnachher.tex
+++ b/Tabellen/Zeitnachher.tex
@@ -4,8 +4,8 @@
 \textbf{Anforderungsaufnahme} & 2 h & 2 h & \\
 \rowcolor{odd}\textbf{Planung} & 4 h & 4 h & \\ 
 \textbf{Analysephase} & 6 h & 6 h  &  \\
-\rowcolor{odd}\textbf{Entwurfsphase} & 6 h & 5,5 h & - 0,5 h \\
-\textbf{Implementierungsphase} & 23 h  & 23.5 h  & + 0,5 h \\
+\rowcolor{odd}\textbf{Entwurfsphase} & 6 h & 5,5 h & + 0,5 h \\
+\textbf{Implementierungsphase} & 23 h  & 23.5 h  & - 0,5 h \\
 \rowcolor{odd}\textbf{Testphase/Qualitätsicherung} & 6 h & 6 h & \\
 \textbf{Fazit} & 3 h & 3 h & \\
 \rowcolor{odd}\textbf{Dokumentationsphase} & 20 h & 20 h & \\
