fix(*): small fixes

--- a/Allgemein/Packages.tex
+++ b/Allgemein/Packages.tex
@@ -15,7 +15,7 @@
 \usepackage{relsize} % Schriftgröße relativ festlegen
 
 % Tabellen ---------------------------------------------------------------------
-\PassOptionsToPackage{table}{xcolor}
+\usepackage[table]{xcolor}
 \usepackage{tabularx}
 % für lange Tabellen
 \usepackage{longtable}
