--- a/Tabellen/Datenelemente.tex
+++ b/Tabellen/Datenelemente.tex
@@ -1,6 +1,9 @@
 \begin{tabu}{p{0.5\textwidth}p{0.45\textwidth }}
-\rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Name} & \textbf{Domäne} \\
+\rowfont{\bfseries\leavevmode\color{headingfont}}\textbf{Name} & \textbf{Domäne} \\
+/hline
 /camelot/oc\_created\_by & usnam \\
-\rowcolor{odd}/camelot/oc\_created\_on & datum \\
+/hline
+/camelot/oc\_created\_on & datum \\
+/hline
 /camelot/oc\_ord\_comment & /camelot/oc\_ord\_comment \\
 \end{tabu}
