--- a/Tabellen/Strukturen.tex
+++ b/Tabellen/Strukturen.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{p{0.32\textwidth}p{0.3\textwidth}p{0.3\textwidth }}
-\rowcolor{heading}\rowstyle{\color{white}}\textbf{Name} & \rowstyle{\color{white}}\textbf{Componenten} &\rowstyle{\color{white}}\textbf{Typen} \\\rowstyle{\color{black}}
+\textbf{Name} & \textbf{Componenten} & \textbf{Typen} \\
 /camelot/oc\_dats\_range\_s & sign & ddsign \\
 & option & ddoption \\
 & low & dats \\ 
